fixed product fa's issue can now rescale without placing fa icons outside of div on mobile views

--- a/themes/persian-feast/css/custom.css
+++ b/themes/persian-feast/css/custom.css
@@ -187,7 +187,6 @@ footer i{
     display: none;
 }
 #productsContainer{
-    width: 100%;
     padding: 0px;
 }
 .mix img{
@@ -212,15 +211,14 @@ footer i{
     color: orange;
 }
 .prodItemDivDesc{
-    border-top: 1px solid lightgrey;
+    border: 1px solid lightgrey;
     padding: 3.5%;
 }
 .productPriceContainer{
     border: 1px solid lightgray;
     text-align: center;
     margin-bottom: 0px !important;
-    padding: 0px !important;
-    height: 160px;
+    height: auto;
     width: auto;
 }
 .productImage :hover{
